@@ -254,12 +254,6 @@ abstract class NFSubstitution {
     public boolean equals(Object that) {
         // compare class and all of the fields all substitutions have
         // in common
-        if (that == null) {
-            return false;
-        }
-        if (this == that) {
-            return true;
-        }
         if (this.getClass() == that.getClass()) {
             NFSubstitution that2 = (NFSubstitution)that;
 
@@ -268,11 +262,6 @@ abstract class NFSubstitution {
                 && (numberFormat == null ? (that2.numberFormat == null) : numberFormat.equals(that2.numberFormat));
         }
         return false;
-    }
-    
-    public int hashCode() {
-        assert false : "hashCode not designed";
-        return 42;
     }
 
     /**
@@ -476,7 +465,7 @@ abstract class NFSubstitution {
             // the result.
             result = composeRuleValue(result, baseValue);
             if (result == (long)result) {
-                return Long.valueOf((long)result);
+                return new Long((long)result);
             } else {
                 return new Double(result);
             }
@@ -720,11 +709,6 @@ class MultiplierSubstitution extends NFSubstitution {
             return false;
         }
     }
-    
-    public int hashCode() {
-        assert false : "hashCode not designed";
-        return 42;
-    }
 
     //-----------------------------------------------------------------------
     // formatting
@@ -900,11 +884,6 @@ class ModulusSubstitution extends NFSubstitution {
             return false;
         }
     }
-    
-    public int hashCode() {
-        assert false : "hashCode not designed";
-        return 42;
-    }
 
     //-----------------------------------------------------------------------
     // formatting
@@ -1008,7 +987,7 @@ class ModulusSubstitution extends NFSubstitution {
 
                 result = composeRuleValue(result, baseValue);
                 if (result == (long)result) {
-                    return Long.valueOf((long)result);
+                    return new Long((long)result);
                 } else {
                     return new Double(result);
                 }
@@ -1581,11 +1560,6 @@ class NumeratorSubstitution extends NFSubstitution {
             return false;
         }
     }
-    
-    public int hashCode() {
-        assert false : "hashCode not designed";
-        return 42;
-    }
 
     //-----------------------------------------------------------------------
     // formatting
@@ -1790,11 +1764,6 @@ class NullSubstitution extends NFSubstitution {
     public boolean equals(Object that) {
         return super.equals(that);
     }
-    
-    public int hashCode() {
-        assert false : "hashCode not designed";
-        return 42;
-    }
 
     /**
      * NullSubstitutions don't show up in the textual representation
@@ -1848,7 +1817,7 @@ class NullSubstitution extends NFSubstitution {
     public Number doParse(String text, ParsePosition parsePosition, double baseValue,
                         double upperBound, boolean lenientParse) {
         if (baseValue == (long)baseValue) {
-            return Long.valueOf((long)baseValue);
+            return new Long((long)baseValue);
         } else {
             return new Double(baseValue);
         }
