@@ -1,6 +1,6 @@
 /*
  *******************************************************************************
- * Copyright (C) 1996-2012, International Business Machines Corporation and    *
+ * Copyright (C) 1996-2011, International Business Machines Corporation and    *
  * others. All Rights Reserved.                                                *
  *******************************************************************************
  */
@@ -132,12 +132,6 @@ public final class VersionInfo implements Comparable<VersionInfo>
     public static final VersionInfo UNICODE_6_0;
 
     /**
-     * Unicode 6.1 version
-     * @stable ICU 49
-     */
-    public static final VersionInfo UNICODE_6_1;
-
-    /**
      * ICU4J current release version
      * @stable ICU 2.8
      */
@@ -149,7 +143,7 @@ public final class VersionInfo implements Comparable<VersionInfo>
      * @internal
      * @deprecated This API is ICU internal only.
      */
-    public static final String ICU_DATA_VERSION_PATH = "49b";
+    public static final String ICU_DATA_VERSION_PATH = "48b";
     
     /**
      * Data version in ICU4J.
@@ -252,7 +246,7 @@ public final class VersionInfo implements Comparable<VersionInfo>
             throw new IllegalArgumentException(INVALID_VERSION_NUMBER_);
         }
         int     version = getInt(major, minor, milli, micro);
-        Integer key     = Integer.valueOf(version);
+        Integer key     = new Integer(version);
         VersionInfo  result  = MAP_.get(key);
         if (result == null) {
             result = new VersionInfo(version);
@@ -493,11 +487,10 @@ public final class VersionInfo implements Comparable<VersionInfo>
         UNICODE_5_1   = getInstance(5, 1, 0, 0);
         UNICODE_5_2   = getInstance(5, 2, 0, 0);
         UNICODE_6_0   = getInstance(6, 0, 0, 0);
-        UNICODE_6_1   = getInstance(6, 1, 0, 0);
 
-        ICU_VERSION   = getInstance(49, 0, 2, 0);
-        ICU_DATA_VERSION = getInstance(49, 0, 2, 0);
-        UNICODE_VERSION = UNICODE_6_1;
+        ICU_VERSION   = getInstance(4, 8, 1, 1);
+        ICU_DATA_VERSION = getInstance(4, 8, 1, 0);
+        UNICODE_VERSION = UNICODE_6_0;
 
         UCOL_RUNTIME_VERSION = getInstance(7);
         UCOL_BUILDER_VERSION = getInstance(8);
@@ -530,7 +523,8 @@ public final class VersionInfo implements Comparable<VersionInfo>
     /**
      * Main method prints out ICU version information
      * @param args arguments (currently not used)
-     * @stable ICU 4.6
+     * @draft ICU 4.6
+     * @provisional This API might change or be removed in a future release.
      */
     public static void main(String[] args) {
         String icuApiVer;
